--- a/haschup.cabal
+++ b/haschup.cabal
@@ -48,7 +48,7 @@ cabal-version:       >=1.10
 
 executable haschup
   -- .hs or .lhs file containing the Main module.
-  main-is:             Main.hs
+  main-is:             Haschup.hs
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
