Added http client

--- a/haschup.cabal
+++ b/haschup.cabal
@@ -57,7 +57,7 @@ executable haschup
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.6 && <4.7, playlists, bytestring, text
+  build-depends:       base >=4.6 && <4.7, playlists, bytestring, text, http-conduit, transformers
   
   -- Directories containing source files.
   hs-source-dirs:      src
